Quorum3/Library/Tests/Expressions/Pass/AddTextBoolean.quorum
class Main
    action Main
        text a = "boolean is " + true
        output a
        output "boolean is " + false
    end
end