Quorum3/Library/Tests/Expressions/Fail/BadVariableName.quorum
class Bob
    action Main
        text hi_ = "Hi, from Bob_Interface"
        output hi_
    end
end